--- a/404.html
+++ b/404.html
@@ -101,8 +101,8 @@
 
             #goog-wm-sb {
                 display: inline-block;
-                height: 32px;
-                padding: 0 10px;
+                height: 21px;
+                padding: 6px 10px;
                 margin: 5px 0 0;
                 white-space: nowrap;
                 cursor: pointer;
@@ -117,6 +117,7 @@
                 *overflow: visible;
                 *display: inline;
                 *zoom: 1;
+                text-decoration: none;
             }
 
             #goog-wm-sb:hover,
@@ -148,10 +149,8 @@
                 <li>a mistyped address</li>
                 <li>an out-of-date link</li>
             </ul>
-            <script>
-                var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
-            </script>
-            <script src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
+            
+            <a id="goog-wm-sb" href="/">Head back to home</a>
         </div>
     </body>
 </html>
